--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.37.1",
+    "@react-three/fiber": "^8.8.10",
+    "@splinetool/loader": "^0.9.132",
+    "@splinetool/r3f-spline": "^1.0.2",
     "next": "13.0.0",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "three": "^0.145.0",
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
     "eslint": "8.26.0",
